fix: add verification model, add email verification function, add verification type, add email verification router
